verify errors + fix on paste Role

--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -335,6 +335,12 @@
     "verify_role_symbol_part1": "needs between",
     "verify_role_symbol_part2": "and",
     "verify_role_symbol_part3": "to acceed to the common task",
+    "verify_role_symbol_recap_part1": "It is necessary to plan that the",
+    "verify_role_symbol_recap_part2": "task will be achievable between",
+    "verify_role_symbol_recap_part3": "and",
+    "verify_role_symbol_recap_error1_part1": "Attention, the common task",
+    "verify_role_symbol_recap_error1_part2": "cannot be completed simultaneously between roles. Add tasks (side tasks) to the role with the least TU to access this common task until it becomes possible to complete it simultaneously",
+    "verify_role_symbol_recap_error2": "There is only one common task",
     "verify_role_part1": "The quest of",
     "verify_role_part2": "needs between",
     "verify_role_part3": "and",
