--- a/src/assets/lang/fr.json
+++ b/src/assets/lang/fr.json
@@ -16,7 +16,7 @@
     "enableHelp_label": "Activer les aides",
     "enableHelp_tooltip": "Descriptif de chaque élément du RLG Maker.",
     "unity_label": "Intégrer le jeu sous Unity (WIP)",
-    "unity_tooltip": "Utilisation dans un template de jeu précis. Contacter gaelle.guigon@imt-nord-europe.fr pour plus d’informations. Non disponible dans cette version.",
+    "unity_tooltip": "Utilisation dans un template de jeu précis. Contacter gaelle.guigon@imt-nord-europe.fr pour plus d'informations. Non disponible dans cette version.",
     "download_tooltip": "Télécharger une sauvegarde du scénario.",
     "upload_tooltip": "Importer une sauvegarde du scénario.",
     "manual_tooltip": "Télécharger le manuel d'utilisation",
@@ -53,7 +53,7 @@
     "gameEducationnalObjective_title": "Objectif(s) pédagogique",
     "gameEducationnalObjective_objective_label": "Commun pour le jeu",
     "gameEducationnalObjective_objective_placeholder": "- Améliorer les softskills\n- Apprendre à coopérer",
-    "gameEducationnalObjective_objective_tooltip": "Ce que l’on veut atteindre en situation de formation. Commencer chaque objectif par un verbe. Si votre jeu est composé de plusieurs missions, distinguez les objectifs globaux du jeu et les objectifs de chaque mission.",
+    "gameEducationnalObjective_objective_tooltip": "Ce que l'on veut atteindre en situation de formation. Commencer chaque objectif par un verbe. Si votre jeu est composé de plusieurs missions, distinguez les objectifs globaux du jeu et les objectifs de chaque mission.",
     "gameContext_title": "Contexte du jeu",
     "gameContext_universe_label": "Univers",
     "gameContext_universe_placeholder": "Réaliste",
@@ -66,9 +66,9 @@
     "gameContext_duration_tooltip": "Combien de temps va durer le jeu ? Sachant que le jeu comporte 1 ou plusieurs missions. Une mission peut être la durée d’une séance de cours et le jeu se déroulerait sur plusieurs séances de cours.",
     "gameContext_intrigue_label": "Intrigue",
     "gameContext_intrigue_placeholder": "Vous êtes stagiaire dans une agence de communication et devez faire vos preuves pour être embauché.e",
-    "gameContext_intrigue_tooltip": "Quelle est l’histoire du jeu ? Quel est l’enjeu pour les joueurs ?",
+    "gameContext_intrigue_tooltip": "Quelle est l'histoire du jeu ? Quel est l'enjeu pour les joueurs ?",
     "gameContext_other_label": "Contexte d'utilisation",
-    "gameContext_other_placeholder": "Contexte d’utilisation : lieu, présence de tuteur/formateur, à quel moment du cursus utiliser ce jeu, matériel nécessaire",
+    "gameContext_other_placeholder": "Contexte d'utilisation : lieu, présence de tuteur/formateur, à quel moment du cursus utiliser ce jeu, matériel nécessaire",
     "gameContext_other_tooltip": "Tout autre élément que vous souhaiteriez prendre en compte dans le jeu et non défini dans les tuiles",
 
     "mission": "Mission",
@@ -81,7 +81,7 @@
     "missionEducationnalObjective_title": "Objectif(s) pédagogique",
     "missionEducationnalObjective_objective_label": "Commun pour la mission",
     "missionEducationnalObjective_objective_placeholder": "Comprendre les rôles impliqués dans la conception d'un site web",
-    "missionEducationnalObjective_objective_tooltip": "Ce que l’on veut atteindre en situation de formation. Commencer chaque objectif par un verbe. Si votre jeu est composé de plusieurs missions, distinguez les objectifs globaux du jeu et les objectifs de chaque mission",
+    "missionEducationnalObjective_objective_tooltip": "Ce que l'on veut atteindre en situation de formation. Commencer chaque objectif par un verbe. Si votre jeu est composé de plusieurs missions, distinguez les objectifs globaux du jeu et les objectifs de chaque mission",
     "missionContext_clean_part1": "Contexte de la mission",
     "missionContext_clean_part2": "",
     "missionContext_title_part1": "Contexte de la mission",
@@ -91,12 +91,12 @@
     "missionContext_duration_tooltip": "Combien de temps va durer la mission ?",
     "missionContext_intrigue_label": "Intrigue",
     "missionContext_intrigue_placeholder": "Concevez un site web ergonomique pour votre premier client",
-    "missionContext_intrigue_tooltip": "Quelle est l’histoire de la mission ? Quel est l’enjeu pour les joueurs ?",
+    "missionContext_intrigue_tooltip": "Quelle est l'histoire de la mission ? Quel est l'enjeu pour les joueurs ?",
     "missionContext_communication_label": "Moyen(s) de communication",
     "missionContext_communication_placeholder": "Chat en ligne, vocal en ligne, face à face, talkie walkie, pigeon voyageur...",
     "missionContext_communication_tooltip": "Comment les joueurs vont-ils communiquer entre eux : à l'oral, par chat, en vocal sur ordinateur, par messages, etc.",
     "missionContext_other_label": "Contexte d'utilisation",
-    "missionContext_other_placeholder": "Contexte d’utilisation : lieu, présence de tuteur/formateur, à quel moment du cursus utiliser ce jeu, matériel nécessaire, public cible",
+    "missionContext_other_placeholder": "Contexte d'utilisation : lieu, présence de tuteur/formateur, à quel moment du cursus utiliser ce jeu, matériel nécessaire, public cible",
     "missionContext_other_tooltip": "Tout autre élément que vous souhaiteriez prendre en compte dans la mission et non défini dans les tuiles",
 
     "role_add_tooltip": "Ajouter un rôle.",
@@ -335,6 +335,12 @@
     "verify_role_symbol_part1": "met entre",
     "verify_role_symbol_part2": "et",
     "verify_role_symbol_part3": "pour accéder à la tâche commune",
+    "verify_role_symbol_recap_part1": "Il faut donc prévoir que la tâche",
+    "verify_role_symbol_recap_part2": "sera réalisable entre",
+    "verify_role_symbol_recap_part3": "et",
+    "verify_role_symbol_recap_error1_part1": "Attention la tâche commune",
+    "verify_role_symbol_recap_error1_part2": "ne peut pas être réalisée simultanément entre les rôles. Ajoutez des tâches (annexes) au rôle ayant le moins d'UT pour accéder à cette tâche commune jusqu'à ce qu'il soit possible de la réaliser simultanément",
+    "verify_role_symbol_recap_error2": "Il n'y a qu'une seule tâche commune",
     "verify_role_part1": "La quête de",
     "verify_role_part2": "met entre",
     "verify_role_part3": "et",
