--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -13,14 +13,20 @@
     "plus_tooltip": "Add a new tile of this type.",
     "zoomIn_tooltip": "Zoom In.",
     "zoomOut_tooltip": "Zoom Out.",
+    "settingsMenu_tooltip": "Open the settings menu (save, import, ...)",
     "enableHelp_label": "Enable the tooltips",
     "enableHelp_tooltip": "Description of each element of the RLG Maker.",
-    "unity_label": "Integrate the game into Unity (WIP)",
+    "unity_label": "Integrate the game into Unity",
     "unity_tooltip": "Usage in a specific game template. Contact gaelle.guigon@imt-nord-europe.fr for more information. Not available in this version.",
+    "download_label": "Download this scenario",
     "download_tooltip": "Download a backup of the scenario.",
+    "upload_label": "Import a scenario",
     "upload_tooltip": "Import a backup of the scenario.",
+    "manual_label": "Download the guide",
     "manual_tooltip": "Download the user manual (FR).",
+    "verify_label": "Verify the scenario",
     "verify_tooltip": "Verify the scenario",
+    "lang_label": "Change the language",
     "lang_tooltip": "Change the language.",
 
     "snackbar_identifier": "Attention, this identifier is already used in this Role.",
