--- a/src/assets/lang/fr.json
+++ b/src/assets/lang/fr.json
@@ -13,14 +13,20 @@
     "plus_tooltip": "Ajouter une nouvelle tuilde de ce type.",
     "zoomIn_tooltip": "Zoomer.",
     "zoomOut_tooltip": "Dézoomer.",
+    "settingsMenu_tooltip": "Ouvrir le menu des paramètres (sauvegarde, import, ...)",
     "enableHelp_label": "Activer les aides",
     "enableHelp_tooltip": "Descriptif de chaque élément du RLG Maker.",
-    "unity_label": "Intégrer le jeu sous Unity (WIP)",
+    "unity_label": "Intégrer le jeu sous Unity",
     "unity_tooltip": "Utilisation dans un template de jeu précis. Contacter gaelle.guigon@imt-nord-europe.fr pour plus d'informations. Non disponible dans cette version.",
+    "download_label": "Télécharger ce scénario",
     "download_tooltip": "Télécharger une sauvegarde du scénario.",
+    "upload_label": "Importer un scénario",
     "upload_tooltip": "Importer une sauvegarde du scénario.",
+    "manual_label": "Télécharger le guide",
     "manual_tooltip": "Télécharger le manuel d'utilisation",
+    "verify_label": "Vérifier le scénario",
     "verify_tooltip": "Vérifier le scénario",
+    "lang_label": "Changer la langue",
     "lang_tooltip": "Changer la langue.",
 
     "snackbar_identifier": "Attention, cet identifiant est déjà utilisé dans ce Rôle",
