Task unity mode + fix on clear character in task reward on character delete + fix en translate of 'plan de relance'

--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -205,6 +205,24 @@
     "task_transform_annexeTask": "Convert to Side task",
     "task_transform_optionnalTask": "Convert to Alternative Task",
     "task_transform_finalTask": "Convert to Final Task",
+    "task_unity_type_label": "Type:",
+    "task_unity_type_getObject": "Retrieve an item",
+    "task_unity_type_character": "Talk to an NPC",
+    "task_unity_type_combineObjects": "Combine objects",
+    "task_unity_type_talkWithRole": "Talk to another role",
+    "task_unity_type_exchangeObjects": "Exchange objects",
+    "task_unity_type_depositObject": "Deposit an object",
+    "task_unity_type_askToSeeRole": "Ask to see the role",
+    "task_unity_type_interactObject": "Interact with an object",
+    "task_unity_type_other": "Other",
+    "task_unity_objectName_label": "Name of the object",
+    "task_unity_roleName_label": "Name of the role",
+    "task_unity_characterName_label": "Name of the character",
+    "task_unity_interactName_placeholder": "Name of the interaction",
+    "task_unity_exchangeObjects_give_label": "Give:",
+    "task_unity_exchangeObjects_receive_label": "To receive:",
+    "task_unity_name_label": "Name:",
+    "task_unity_desc_label": "Descr:",
     "normalTask_title": "Task",
     "normalTask_action_placeholder": "Ordering the main HTML tags",
     "normalTask_add": "Add a Task",
@@ -374,7 +392,7 @@
     "legals_dysfunction_title": "Dysfunction and viruses.",
     "legals_dysfunction_content": "IMT Nord Europe cannot be held responsible for direct or indirect damages, losses, or expenses resulting from the use of this website, or the inability of a third party to use it, or from a malfunction, interruption, virus, or a problem with the line or system.",
     "legals_credits_title": "Credits",
-    "legals_credits_content1": "The texts on this site are licensed under CC-BY-NC-SA (Creative Commons with permission for use under the conditions of attribution, non-commercial use, and sharing under the same initial terms).\n\nIcons created by max.icons and Freepik, sourced from: www.flaticon.com and are licensed under CC-BY 3.0.\n\nDevelopment: Romain Deleau\n\nWeb design: Gaëlle Guigon\n\nThese works are part of the Nucléofil project, funded by the government as part of the recovery plan.",
+    "legals_credits_content1": "The texts on this site are licensed under CC-BY-NC-SA (Creative Commons with permission for use under the conditions of attribution, non-commercial use, and sharing under the same initial terms).\n\nIcons created by max.icons and Freepik, sourced from: www.flaticon.com and are licensed under CC-BY 3.0.\n\nDevelopment: Romain Deleau\n\nWeb design: Gaëlle Guigon\n\nThese works are part of the Nucléofil project, funded by the government as part of the stimulus package.",
     "legals_credits_content2": "Additionally, they are the subject of a doctoral thesis at Sorbonne Université (at LIP6 in the team MOCAH), in collaboration with IMT Nord Europe.",
     "legals_cookies_title": "Cookies",
     "legals_cookies_content": "We do not record any cookies and do not save any personal data!",
