--- a/src/assets/lang/fr.json
+++ b/src/assets/lang/fr.json
@@ -205,6 +205,24 @@
     "task_transform_annexeTask": "Transformer en Tâche annexe",
     "task_transform_optionnalTask": "Transformer en Tâche alternative",
     "task_transform_finalTask": "Transformer en Tâche finale",
+    "task_unity_type_label": "Type :",
+    "task_unity_type_getObject": "Récupérer un objet",
+    "task_unity_type_character": "Parler à un PNJ",
+    "task_unity_type_combineObjects": "Combiner des objets",
+    "task_unity_type_talkWithRole": "Parler avec un autre rôle",
+    "task_unity_type_exchangeObjects": "Échanger des objets",
+    "task_unity_type_depositObject": "Déposer un objet",
+    "task_unity_type_askToSeeRole": "Demander à voir le rôle",
+    "task_unity_type_interactObject": "Interagir avec un objet",
+    "task_unity_type_other": "Autre",
+    "task_unity_objectName_label": "Nom de l'objet",
+    "task_unity_roleName_label": "Nom du rôle",
+    "task_unity_characterName_label": "Nom du personnage",
+    "task_unity_interactName_placeholder": "Nom de l'interaction",
+    "task_unity_exchangeObjects_give_label": "Donne :",
+    "task_unity_exchangeObjects_receive_label": "A recevoir :",
+    "task_unity_name_label": "Nom :",
+    "task_unity_desc_label": "Descr :",
     "normalTask_title": "Tâche",
     "normalTask_action_placeholder": "Positionner dans l'ordre les balises HTML principales",
     "normalTask_add": "Ajouter une Tâche",
