Discussions (without results)

--- a/src/assets/lang/en.json
+++ b/src/assets/lang/en.json
@@ -407,5 +407,45 @@
     "rewards_name_label": "Name",
     "rewards_object_placeholder": "Name of the object",
     "rewards_character_placeholder": "Character",
-    "rewards_skill_placeholder": "Skill"
+    "rewards_skill_placeholder": "Skill",
+
+    "discussions_title": "Discussions",
+    "discussions_tooltip": "Allows managing discussions between the role and characters",
+    "discussions_selectCharacter_title": "Select the character",
+    "discussions_selectCharacter_label": "Name",
+    "discussions_selectCharacter_placeholder": "Character name",
+    "discussions_selectCharacter_tooltip": "Specify the name of the character with whom the role will interact",
+    "discussions_addDiscussion_title": "Add a new discussion",
+    "discussions_addDiscussion_label": "Title",
+    "discussions_addDiscussion_tooltip": "Title of the new discussion",
+    "discussions_addDiscussion_button": "Add",
+    "discussions_editDiscussion_title": "Edit discussions",
+    "discussions_editDiscussion_discussion_tooltip": "Click to edit this discussion",
+    "discussions_editDiscussion_remove_tooltip": "Delete the discussion",
+
+    "discussion_title": "Discussion",
+    "discussion_name_label": "Discussion Name:",
+    "discussion_firstDiscussion_label": "First discussion",
+    "discussion_firstDiscussion_tooltip": "A first discussion is already selected for this character, you must uncheck it first to select a new one",
+    "discussion_firstSentence_label": "First sentence",
+    "discussion_firstSentence_tooltip": "A first sentence is already selected for this discussion, you must uncheck it first to select a new one",
+    "discussion_declarativeSentence": "Sentence",
+    "discussion_interrogativeSentence": "Question",
+    "discussion_response": "Response",
+    "discussion_result_label": "Result",
+    "discussion_result_placeholder": "Select a result",
+    "discussion_nextSentence_label": "Next sentence",
+    "discussion_nextSentence_placeholder": "Select the next sentence",
+    "discussion_buttons_newDeclarativeSentence": "Add a sentence",
+    "discussion_buttons_newInterrogativeSentence": "Add a question",
+    "discussion_buttons_deleteDeclarativeSentence": "Delete the sentence",
+    "discussion_buttons_deleteInterrogativeSentence": "Delete the question",
+    "discussion_buttons_newResponse": "Add a response",
+    "discussion_buttons_deleteResponse": "Delete the response",
+    "discussion_buttons_close": "Close",
+    "discussion_delete": "this Discussion",
+    "discussion_declarativeSentence_delete": "this Sentence",
+    "discussion_interrogativeSentence_delete": "this Question",
+    "discussion_response_delete": "this Response"
+
 }
