--- a/src/assets/lang/fr.json
+++ b/src/assets/lang/fr.json
@@ -407,5 +407,44 @@
     "rewards_name_label": "Nom",
     "rewards_object_placeholder": "Nom de l'objet",
     "rewards_character_placeholder": "Personnage",
-    "rewards_skill_placeholder": "Compétence"
+    "rewards_skill_placeholder": "Compétence",
+
+    "discussions_title": "Discussions",
+    "discussions_tooltip": "Permet de gérer les discussions entre le rôle et les personnages",
+    "discussions_selectCharacter_title": "Sélectionner le personnage",
+    "discussions_selectCharacter_label": "Nom",
+    "discussions_selectCharacter_placeholder": "Nom du personnage",
+    "discussions_selectCharacter_tooltip": "Indiquez le nom du personnage avec lequel le rôle va interagir",
+    "discussions_addDiscussion_title": "Ajouter une nouvelle discussion",
+    "discussions_addDiscussion_label": "Intitulé",
+    "discussions_addDiscussion_tooltip": "Titre de la nouvelle discussion",
+    "discussions_addDiscussion_button": "Ajouter",
+    "discussions_editDiscussion_title": "Éditer les discussions",
+    "discussions_editDiscussion_discussion_tooltip": "Cliquez pour éditer cette discussion",
+    "discussions_editDiscussion_remove_tooltip": "Supprimer la discussion",
+
+    "discussion_title": "Discussion",
+    "discussion_name_label": "Nom de la discussion :",
+    "discussion_firstDiscussion_label": "Première discussion",
+    "discussion_firstDiscussion_tooltip": "Une première discussion est déjà choisie pour ce personnage, il vous faut d'abord la décocher pour en sélectionner une nouvelle",
+    "discussion_firstSentence_label": "Première phrase",
+    "discussion_firstSentence_tooltip": "Une première phrase est déjà choisie pour cette discussion, il vous faut d'abord la décocher pour en sélectionner une nouvelle",
+    "discussion_declarativeSentence": "Phrase",
+    "discussion_interrogativeSentence": "Question",
+    "discussion_response": "Réponse",
+    "discussion_result_label": "Résultat",
+    "discussion_result_placeholder": "Choisir un résultat",
+    "discussion_nextSentence_label": "Phrase suivante",
+    "discussion_nextSentence_placeholder": "Choisir la phrase suivante",
+    "discussion_buttons_newDeclarativeSentence": "Ajouter une phrase",
+    "discussion_buttons_newInterrogativeSentence": "Ajouter une question",
+    "discussion_buttons_deleteDeclarativeSentence": "Supprimer la phrase",
+    "discussion_buttons_deleteInterrogativeSentence": "Supprimer la question",
+    "discussion_buttons_newResponse": "Ajouter une réponse",
+    "discussion_buttons_deleteResponse": "Supprimer la réponse",
+    "discussion_buttons_close": "Fermer",
+    "discussion_delete": "cette Discussion",
+    "discussion_declarativeSentence_delete": "cette Phrase",
+    "discussion_interrogativeSentence_delete": "cette Question",
+    "discussion_response_delete": "cette Réponse"
 }
